# xonnel-xonnel

./: backup.py  imports.py  install.py  uninstall.txt
xonnel-back/: README.md  pyproject.toml
xonnel-backup/: README.md  pyproject.toml
xonnel-calc/: README.md  pyproject.toml
xonnel-calc/xonnel_calc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xonnel-cmd/: README.md  pyproject.toml
xonnel-codex/: README.md  pyproject.toml
xonnel-copy/: README.md  pyproject.toml
xonnel-copy/xonnel_copy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xonnel-cuda/: README.md  pyproject.toml
xonnel-cuda/xonnel_cuda/: __main__.py
xonnel-cuda/xonnel_cuda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xonnel-dbase/: README.md  pyproject.toml
xonnel-delete/: README.md  pyproject.toml
xonnel-deps/: README.md  pyproject.toml
xonnel-deps/xonnel_deps/: __init__.py  __main__.py
xonnel-deps/xonnel_deps/xdeps/: __init__.py  xdeps.py
xonnel-dir/: README.md  pyproject.toml
xonnel-dir/xonnel_dir/: __init__.py
xonnel-dir/xonnel_dir.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xonnel-dir/xonnel_dir/xdir/: __init__.py  xdir.py
xonnel-dot/: README.md  pyproject.toml
xonnel-dot-7z/: README.md  pyproject.toml
xonnel-dot-bat/: README.md  pyproject.toml
xonnel-dot-bin/: README.md  pyproject.toml
xonnel-dot-cmd/: README.md  pyproject.toml
xonnel-dot-exe/: README.md  pyproject.toml
xonnel-dot-html/: README.md  pyproject.toml
xonnel-dot-json/: README.md  pyproject.toml
xonnel-dot-pkl/: README.md  pyproject.toml
xonnel-dot-png/: README.md  pyproject.toml
xonnel-dot-ps1/: README.md  pyproject.toml
xonnel-dot-py/: README.md  pyproject.toml
xonnel-dot-rar/: README.md  pyproject.toml
xonnel-dot-tar/: README.md  pyproject.toml
xonnel-dot-toml/: README.md  pyproject.toml
xonnel-dot-txt/: README.md  pyproject.toml
xonnel-dot-type/: README.md  pyproject.toml
xonnel-dot-xml/: README.md  pyproject.toml
xonnel-dot-zip/: README.md  pyproject.toml
xonnel-dot-zip/xonnel_dot_zip/: __init__.py  __main__.py
xonnel-dot-zip/xonnel_dot_zip/xdotzip/: __init__.py  xdotzip.py
xonnel-dot/xonnel_dot/: __init__.py  __main__.py
xonnel-dot/xonnel_dot/xdot/: __init__.py  xdot.py
xonnel-emoji/: README.md  pyproject.toml
xonnel-emoji/xonnel_emoji.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xonnel-emoji/xonnel_emoji/xemoji/allemojis/: mapping.py  symbols.py  vehicles.py
xonnel-ensure/: README.md  pyproject.toml
xonnel-eve/: README.md  pyproject.toml
xonnel-exe/: README.md  pyproject.toml
xonnel-exe/xonnel_exe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xonnel-exe/xonnel_exe/xexe/: __init__.py  xexe.py
xonnel-execute/: README.md  pyproject.toml
xonnel-execute/xonnel_execute/: __init__.py  __main__.py
xonnel-execute/xonnel_execute/xexecute/: __init__.py  xexecute.py
xonnel-exit/: README.md  pyproject.toml
xonnel-exit/xonnel_exit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xonnel-file/: README.md  pyproject.toml
xonnel-fire/: README.md  pyproject.toml
xonnel-fire-cuda/: LICENSE  README.md  pyproject.toml
xonnel-fire-file/: README.md  pyproject.toml
xonnel-fire-mask/: README.md  pyproject.toml
xonnel-fire-tens/: README.md  pyproject.toml
xonnel-fire-tens/xonnel_fire_tens/: __init__.py  __main__.py
xonnel-fire-tens/xonnel_fire_tens/xfiretens/: __init__.py  xfiretens.py
xonnel-fire-type/: README.md  pyproject.toml
xonnel-fire-type/xonnel_fire_type/: __init__.py  __main__.py
xonnel-fire-type/xonnel_fire_type/xfiretype/: __init__.py  xfiretype.py
xonnel-fire/xonnel_fire/: __init__.py  __main__.py
xonnel-fire/xonnel_fire/xfire/: __init__.py  xfire.py
xonnel-game/: README.md  pyproject.toml
xonnel-game/xonnel_game/: __init__.py  __main__.py
xonnel-game/xonnel_game/xgame/: __init__.py  xgame.py
xonnel-gen/: README.md  (+1 more)
xonnel-git/: README.md  pyproject.toml
xonnel-git/xonnel_git.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xonnel-git/xonnel_git/xgit/: xgit.py
xonnel-ip/: README.md  pyproject.toml
xonnel-ip/xonnel_ip/: __init__.py  __main__.py
xonnel-ip/xonnel_ip/xip/: __init__.py  xip.py
xonnel-lan/: README.md  pyproject.toml
xonnel-lan/xonnel_lan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xonnel-mail/: README.md  pyproject.toml
xonnel-mail/xonnel_mail.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xonnel-move/: README.md  pyproject.toml
xonnel-move/xonnel_move/: __init__.py  __main__.py
xonnel-move/xonnel_move/xmove/: __init__.py  xmove.py
xonnel-noiz-perl/: README.md  pyproject.toml
xonnel-noiz-perl/xonnel_noiz_perl/: __init__.py  __main__.py
xonnel-noiz-perl/xonnel_noiz_perl/xnoizperl/: __init__.py  xnoizperl.py
xonnel-numb-math/: README.md  pyproject.toml
xonnel-numb-math/xonnel_numb_math/: __init__.py  __main__.py
xonnel-numb-math/xonnel_numb_math/xnumbmath/: __init__.py  xnumbmath.py
xonnel-numb-norm/: README.md  pyproject.toml
xonnel-numb-norm/xonnel_numb_norm/: __init__.py  __main__.py
xonnel-numb-norm/xonnel_numb_norm/xnumbnorm/: __init__.py  xnumbnorm.py
xonnel-numb-rand/: README.md  pyproject.toml
xonnel-numb-rand/xonnel_numb_rand/: __init__.py  __main__.py
xonnel-numb-rand/xonnel_numb_rand/xnumbrand/: __init__.py  xnumbrand.py
xonnel-pack/: README.md  pyproject.toml
xonnel-pack/xonnel_pack/: __init__.py  __main__.py
xonnel-pack/xonnel_pack/xpack/: __init__.py  xpack.py
xonnel-pad/: README.md  pyproject.toml
xonnel-pad/xonnel_pad.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xonnel-path/: README.md  pyproject.toml
xonnel-path/xonnel_path.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xonnel-pkl/: README.md  pyproject.toml
xonnel-pkl/xonnel_pkl/: __init__.py  __main__.py
xonnel-pkl/xonnel_pkl/xpkl/: __init__.py  xpkl.py
xonnel-save/: README.md  pyproject.toml
xonnel-save/xonnel_save/: __init__.py  __main__.py
xonnel-save/xonnel_save/xsave/: __init__.py  xsave.py
xonnel-sock/: README.md  pyproject.toml
xonnel-sock/xonnel_sock.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xonnel-sock/xonnel_sock/xsock/: xsock.py
(+464 files in other folders)
