[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xonnel-copy"
version = "0.1.0"
description = """A python library: xonnel-copy

- copy (dir     →    dir)
- copy (file    →    file)"""
authors = [{name = "Xonnel"}]
readme = "README.md"
requires-python = ">=3.14"

[tool.setuptools.packages.find]
where = ["."]
