[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xonnel-dir"
version = "0.1.0"
description = """A python library: xonnel-dir

- dir (crawl)
- dir (tree)
- dir (print)"""
authors = [{name = "Xonnel"}]
readme = "README.md"
requires-python = ">=3.14"

[tool.setuptools.packages.find]
where = ["."]
