[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xonnel-exit"
version = "0.1.0"
description = """A python library: xonnel-exit

- supports:
    - sys.exit
    - os._exit
    - atexit

- EXIT.register(call=callable)
    - when the program ends it'll call all these before program ends"""
authors = [{name = "Xonnel"}]
readme = "README.md"
requires-python = ">=3.14"

[tool.setuptools.packages.find]
where = ["."]
