[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xonnel-fire"
version = "0.1.0"
description = """A python library: xonnel-fire

- torch wrapper
    - fire-tens (tensor utilities for fire)
    - fire-rand (random utilities for fire)"""
authors = [{name = "Xonnel"}]
readme = "README.md"
requires-python = ">=3.14"

[tool.setuptools.packages.find]
where = ["."]
