[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xonnel-farm"
version = "0.1.0"
description = """A python library: xonnel-load

- loading of any file type to memory
    - as reasonable format (e.g. dict for json, ElementTree for xml, etc.)
    - as bytes"""
authors = [{name = "Xonnel"}]
readme = "README.md"
requires-python = ">=3.14"

[tool.setuptools.packages.find]
where = ["."]
