[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xonnel-numb-rand"
version = "0.1.0"
description = """A python library: xonnel-numb-rand

- random utilities for numpy"""
authors = [{name = "Xonnel"}]
readme = "README.md"
requires-python = ">=3.14"

[tool.setuptools.packages.find]
where = ["."]
